[office] fix compilation error